no visible scroll bar fixed

--- a/src/App.styles.scss
+++ b/src/App.styles.scss
@@ -3,11 +3,4 @@
     flex-direction: column;
     min-height: 100vh;
     position: relative;
-    &::-webkit-scrollbar{
-        width: 0px;
-    }
-    &::-webkit-scrollbar-thumb{
-        background: transparent;
-        border-radius: 0px;
-    }
 }
