--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -6,7 +6,13 @@ button {
 body{
     font-family: 'Montserrat', sans-serif;
     height: 100vh;
-}
+    &::-webkit-scrollbar{
+        width: 0px;
+    }
+    &::-webkit-scrollbar-thumb{
+        background: transparent;
+        border-radius: 0px;
+    }}
 
 * {
     box-sizing: border-box;
